# osint-graph

./: .codespell_ignore  .codespellrc  .gitignore  .ignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  TODO.md  biome.json  build_rs_cov.profraw  check_openapi_spec.sh  index.html  justfile  package-lock.json  package.json  run_docker.sh
.github/workflows/: clippy.yml  codecov.yml  codespell.yml  js_lint.yml  rust_build.yml
artwork/: osint-graph logo.pxm
egui_node_graph/: Cargo.toml
egui_node_graph/src/: constants.rs  editor_ui.rs  graph.rs  graph_impls.rs  id_type.rs  lib.rs  node_finder.rs  traits.rs  ui_state.rs
osint-graph/: Cargo.toml  Trunk.toml  index.html
osint-graph-backend/: Cargo.toml  asdfsadfdf  osint-graph.redb
osint-graph-backend/src/: attachment.rs  auth.rs  cli.rs  identifier.rs  kvstore.rs  lib.rs  logging.rs  main.rs  middleware.rs  openapi.rs  project.rs  storage.rs  tls.rs
osint-graph-backend/src/db/: attachment.rs  mod.rs  node.rs  nodelink.rs  project.rs
osint-graph-backend/src/entity/: attachment.rs  mod.rs  node.rs  nodelink.rs  pkce_state.rs  project.rs  user.rs
osint-graph-backend/src/migration/: m20240101_000001_create_tables.rs  m20250105_000001_insert_default_inbox_project.rs  m20251106_000001_drop_attachments_column_nodes.rs  m20251106_000002_create_sessions.rs  mod.rs
osint-graph-backend/src/oauth/: middleware.rs  mod.rs
osint-graph-backend/src/tests/: mod.rs
osint-graph-frontend/: .eslintrc.cjs  eslint.config.cjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
osint-graph-frontend/src/: App.tsx  api.tsx  index.css  main.tsx  osint-graph.css  types.tsx  ui.tsx
osint-graph-frontend/src/components/: ContextMenuItem.tsx  LoginDialog.tsx  MermaidViewerDialog.tsx  NodeSearch.tsx  NodeTypeMenu.tsx  ProjectManagementDialog.tsx  ProjectMismatchDialog.tsx  ProjectSelector.tsx
osint-graph-frontend/src/contexts/: AuthContext.tsx
osint-graph-frontend/src/edges/: index.ts
osint-graph-frontend/src/nodes/: OSINTNodes.tsx  PositionLoggerNode.tsx  index.ts
osint-graph-frontend/src/sigmademo/: ClustersPanel.tsx  DescriptionPanel.tsx  GraphDataController.tsx  GraphEventsController.tsx  GraphSettingsController.tsx  GraphTitle.tsx  Panel.tsx  SearchField.tsx  TagsPanel.tsx  canvas-utils.tsx  use-debounce.tsx
osint-graph-shared/: Cargo.toml
osint-graph-shared/src/: attachment.rs  error.rs  lib.rs  node.rs  nodelink.rs  project.rs
osint-graph-shared/src/data/: tiktok.rs
osint-graph/.cargo/: config.toml
osint-graph/src/: app.rs  lib.rs  main.rs  parser.rs  projects.rs  storage.rs
osint-graph/src/model/: mod.rs  valuetype.rs
osint-graph/static/: index.html  wasmloader.js
src/: app.rs  lib.rs  main.rs
