

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["osint-graph-backend", "osint-graph-shared"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"


[workspace.dependencies]
chrono = { version = "0.4.33", default-features = false, features = [
    "now",
    "std",
] }
serde = { version = "^1.0" }
serde_json = { version = "1.0.113" }

sqlx = { version = "0.7.4", features = [
    "sqlite",
    "runtime-tokio",
    "chrono",
    "json",
    "uuid",
] }

uuid = { version = "1.7.0" }


[profile.release]
opt-level = 2 # fast and small wasm
