

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["osint-graph-backend", "osint-graph-shared"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"


[workspace.dependencies]
chrono = { version = "0.4.42", default-features = false, features = [
    "now",
    "std",
] }
serde = { version = "^1.0" }
serde_json = { version = "1.0.145" }
sea-orm = { version = "1.1.17", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "uuid",
    "json-array",
] }
sea-query = "0.32.7"

sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio",
    "chrono",
    "json",
    "uuid",
] }

uuid = { version = "1.18.1" }


[profile.release]
opt-level = 2 # fast and small wasm
