[package]
version.workspace = true
edition = { workspace = true }

name = "osint-graph-backend"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws", "http2", "macros"] }
futures = "0.3.30"
http-body-util = "0.1.0"
log = "0.4.21"
osint-graph-shared = { path = "../osint-graph-shared" }
rand = "0.8.5"
redb = { version = "1.5.0", features = ["cache_metrics", "log"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shellexpand = "3.1.0"
sqlx = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.5.0", features = [
    "add-extension",
    "auth",
    "compression-gzip",
    "compression-deflate",
    "cors",
    "limit",
    "set-header",
    "trace",
    "fs",
] }
tower-layer = "0.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.0"
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
axum-test = "14.10.0"
chrono.workspace = true
