[package]
version.workspace = true
edition = { workspace = true }

name = "osint-graph-backend"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.6", features = ["ws", "http2", "macros"] }
chrono = { workspace = true, features = ["serde"] }
clap = { version = "4.5.51", features = ["derive", "env"] }
futures = "0.3.31"
http-body-util = "0.1.3"
log = "0.4.28"
osint-graph-shared = { path = "../osint-graph-shared" }
rand = "0.9.2"
sea-orm = { workspace = true }
sea-orm-migration = { version = "1.1.17", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
sea-query = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shellexpand = "3.1.1"
sqlx = { workspace = true }
tokio = { version = "1.48", features = ["full"] }
tower = { version = "0.5", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.6.6", features = [
    "add-extension",
    "auth",
    "compression-gzip",
    "compression-deflate",
    "cors",
    "limit",
    "set-header",
    "trace",
    "fs",
] }
tower-layer = "0.3.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.7"
uuid = { workspace = true, features = ["serde", "v4"] }
zstd = "0.13.3"

[dev-dependencies]
axum-test = "18.2.1"
chrono.workspace = true


[[bin]]
name = "osint-graph"
path = "src/main.rs"
