[package]
version.workspace = true
edition = { workspace = true }

name = "osint-graph-backend"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.6", features = [
    "ws",
    "http1",
    "http2",
    "macros",
    "multipart",
    "tracing",
] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
chrono = { workspace = true, features = ["serde"] }
clap = { version = "4.5.51", features = ["derive", "env"] }
flate2 = "1.1.5"
futures = "0.3.31"
http-body-util = "0.1.3"
log = "0.4.28"
openidconnect = "4.0.1"
osint-graph-shared = { path = "../osint-graph-shared" }
rand = "0.9.2"
rustls = { version = "0.23.35", features = ["aws-lc-rs", "zlib"] }
rustls-pemfile = "2.2.0"
sea-orm = { workspace = true }
sea-orm-migration = { version = "1.1.17", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
sea-query = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shellexpand = "3.1.1"
sqlx = { workspace = true }
tokio = { version = "1.48", features = ["full"] }
tokio-rustls = { version = "0.26.4", features = ["zlib", "aws-lc-rs"] }
tower = { version = "0.5", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.6.6", features = [
    "add-extension",
    "auth",
    "compression-gzip",
    "compression-deflate",
    "cors",
    "limit",
    "set-header",
    "trace",
    "fs",
] }
tower-layer = "0.3.3"
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.7"
utoipa = { workspace = true }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
axum-test = "18.2.1"
chrono.workspace = true


[[bin]]
name = "osint-graph"
path = "src/main.rs"
