[package]
name = "osint-graph-shared"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = { workspace = true, features = ["serde", "alloc"] }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }
enum-iterator = { workspace = true }

slotmap = { workspace = true }
rand = "0.8.5"
sqlx = "0.7.4"
serde_json.workspace = true
