[package]
name = "osint-graph-shared"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = { workspace = true, features = ["serde", "alloc"] }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }

sea-orm = { workspace = true }
sea-query = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
rand = "0.9.2"
