[package]
name = "osint-graph"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "osint-graph-trunk"
path = "src/main.rs"

[dependencies]
eframe = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["wasmbind"] }
egui_node_graph2 = { path = "../egui_node_graph", features = ["persistence"] }
egui-notify = "0.12.0"
ehttp = { version = "0.4.0", features = ["native-async"] }
enum-iterator = "1.5.0"
getrandom = { version = "0.2.12", features = ["js"] }
gloo-console = "0.3.0"
gloo-net = "0.5.0"
gloo-utils = "0.2.0"
osint-graph-shared = { path = "../osint-graph-shared" }
log = { workspace = true }
regex = "1.10.3"
serde = { workspace = true }
serde_json = "1.0.112"
wasm-bindgen-futures = "0.4.40"
web-sys = { version = "0.3.67", features = ["Url"] }
egui_extras = "0.26.0"
uuid = { workspace = true, features = ["v4", "js"] }
gloo-storage = "0.3.0"
